#process this file with automake to produce Makefile.in

NULL=

EXTRA_DIST =\
	css/css_ruleimpl.h \
	css/css_stylesheetimpl.h \
	css/css_valueimpl.h \
	css/csshelper.h \
	css/cssparser.h \
	css/cssproperties.h \
	css/cssstyleselector.h \
	css/cssvalues.h \
	dom/css_rule.h \
	dom/css_stylesheet.h \
	dom/css_value.h \
	dom/dom2_events.h \
	dom/dom2_range.h \
	dom/dom2_traversal.h \
	dom/dom2_views.h \
	dom/dom_core.h \
	dom/dom_doc.h \
	dom/dom_element.h \
	dom/dom_exception.h \
	dom/dom_misc.h \
	dom/dom_node.h \
	dom/dom_string.h \
	dom/dom_text.h \
	dom/dom_position.h\
	dom/dom_xml.h \
	dom/html_base.h \
	dom/html_block.h \
	dom/html_document.h \
	dom/html_element.h \
	dom/html_form.h \
	dom/html_head.h \
	dom/html_image.h \
	dom/html_inline.h \
	dom/html_list.h \
	dom/html_misc.h \
	dom/html_object.h \
	dom/html_table.h \
	dcopclient.h \
	kaction.h \
	kapplication.h \
	kcharsets.h \
	kcombobox.h \
	kcompletionbox.h \
	kconfig.h \
	kcursor.h \
	kdatastream.h \
	kdebug.h \
	kfiledialog.h \
	kfileitem.h \
	kglobal.h \
	kglobalsettings.h \
	khtml_ext.h \
	khtml_factory.h \
	khtml_find.h \
	khtml_iface.h \
	khtml_pagecache.h \
	khtml_printsettings.h \
	khtml_run.h \
	khtml_settings.h \
	kiconloader.h \
	kimageio.h \
	klibloader.h \
	klineedit.h \
	klistbox.h \
	klocale.h \
	kmessagebox.h \
	kmimetype.h \
	kmultipledrag.h \
	kprinter.h \
	kprotocolmanager.h \
	ksimpleconfig.h \
	ksslcertchain.h \
	ksslinfodlg.h \
	ksslkeygen.h \
	kstandarddirs.h \
	kstaticdeleter.h \
	kstdaction.h \
	kstringhandler.h \
	ktempfile.h \
	ktrader.h \
	kurl.h \
	kurldrag.h \
	kwin.h \
	kwinmodule.h \
	kxmlguifactory.h \
	netaccess.h \
	qapplication.h \
	qasyncimageio.h \
	qasyncio.h \
	qbitmap.h \
	qbuffer.h \
	qcheckbox.h \
	qclipboard.h \
	qcolor.h \
	qcstring.h \
	qcursor.h \
	qdatetime.h \
	qdict.h \
	qdrawutil.h \
	qevent.h \
	qfile.h \
	qfont.h \
	qfontdatabase.h \
	qfontinfo.h \
	qfontmetrics.h \
	qguardedptr.h \
	qhbox.h \
	qimage.h \
	qinputdialog.h \
	qintcache.h \
	qintdict.h \
	qlabel.h \
	qlist.h \
	qmap.h \
	qmemarray.h \
	qmetaobject.h \
	qmovie.h \
	qobject.h \
	qobjectlist.h \
	qpaintdevice.h \
	qpaintdevicemetrics.h \
	qpainter.h \
	qpalette.h \
	qpixmap.h \
	qpoint.h \
	qpointarray.h \
	qptrdict.h \
	qptrlist.h \
	qptrqueue.h \
	qptrstack.h \
	qptrvector.h \
	qpushbutton.h \
	qradiobutton.h \
	qbuttongroup.h\
	qrect.h \
	qregexp.h \
	qregion.h \
	qscrollbar.h \
	qscrollview.h \
	qsortedlist.h \
	qstring.h \
	qstringlist.h \
	qstyle.h \
	qstylesheet.h \
	qtextcodec.h \
	qtextedit.h \
	qtextstream.h \
	qtimer.h \
	qtooltip.h \
	qvaluelist.h \
	qvariant.h \
	qvector.h \
	qwidget.h \
	qxml.h \
	scheduler.h \
	ecma/kjs_binding.h \
	ecma/kjs_css.h \
	ecma/kjs_dom.h \
	ecma/kjs_html.h \
	ecma/kjs_html.lut.h \
	ecma/kjs_proxy.h \
	ecma/kjs_views.h \
	ecma/kjs_views.lut.h \
	ecma/kjs_window.h \
	editing/htmlediting.h \
	editing/htmlediting_impl.h \
	html/htmlparser.h \
	html/dtd.h \
	html/html_baseimpl.h \
	html/html_blockimpl.h \
	html/html_documentimpl.h \
	html/html_elementimpl.h \
	html/html_formimpl.h \
	html/html_headimpl.h \
	html/html_imageimpl.h \
	html/html_inlineimpl.h \
	html/html_listimpl.h \
	html/html_miscimpl.h \
	html/html_objectimpl.h \
	html/html_tableimpl.h \
	html/htmltokenizer.h \
	java/kjavaappletcontext.h \
	java/kjavaappletwidget.h \
	kio/global.h \
	kio/job.h \
	kio/jobclasses.h \
	kio/kprotocolmanager.h \
	kjs/collector.h \
	kjs/internal.h \
	kjs/interpreter.h \
	kjs/lookup.h \
	kjs/object.h \
	kjs/property_map.h \
	kjs/protect.h \
	kparts/browserextension.h \
	kparts/browserinterface.h \
	kparts/event.h \
	kparts/part.h \
	kparts/partmanager.h \
	misc/decoder.h \
	misc/helper.h \
	misc/htmlattrs.h \
	misc/htmlhashes.h \
	misc/htmltags.h \
	misc/khtmllayout.h \
	misc/loader.h \
	misc/loader_client.h \
	misc/shared.h \
	misc/stringit.h \
	private/qucomextra_p.h \
	rendering/break_lines.h \
	rendering/font.h \
	rendering/render_applet.h \
	rendering/render_body.h \
	rendering/render_box.h \
	rendering/render_br.h \
	rendering/render_flow.h \
	rendering/render_form.h \
	rendering/render_frames.h \
	rendering/render_html.h \
	rendering/render_image.h \
	rendering/render_layer.h \
	rendering/render_list.h \
	rendering/render_object.h \
	rendering/render_replaced.h \
	rendering/render_root.h \
	rendering/render_style.h \
	rendering/render_table.h \
	rendering/render_text.h \
	xml/dom2_eventsimpl.h \
	xml/dom2_rangeimpl.h \
	xml/dom2_traversalimpl.h \
	xml/dom2_viewsimpl.h \
	xml/dom_docimpl.h \
	xml/dom_elementimpl.h \
	xml/dom_nodeimpl.h \
	xml/dom_stringimpl.h \
	xml/dom_textimpl.h \
	xml/dom_xmlimpl.h \
	xml/xml_tokenizer.h\
	CoreFoundation/CoreFoundation.h\
	Foundation/Foundation.h\
	CoreServices/CoreServices.h\
	$(NULL)


