# Process this file with automake to produce Makefile.in

NULL= 

EXTRA_DIST = \
eastResizeCursor.tiff\
helpCursor.tiff\
linkCursor.tiff\
moveCursor.tiff\
northEastResizeCursor.tiff\
northResizeCursor.tiff\
northWestResizeCursor.tiff\
southEastResizeCursor.tiff\
southResizeCursor.tiff\
southWestResizeCursor.tiff\
waitCursor.tiff\
westResizeCursor.tiff\
$(NULL)

pkgdata_DATA = \
eastResizeCursor.tiff\
helpCursor.tiff\
linkCursor.tiff\
moveCursor.tiff\
northEastResizeCursor.tiff\
northResizeCursor.tiff\
northWestResizeCursor.tiff\
southEastResizeCursor.tiff\
southResizeCursor.tiff\
southWestResizeCursor.tiff\
waitCursor.tiff\
westResizeCursor.tiff\
$(NULL)
